# mcp-telemetry

./: README.md  pyproject.toml  telemetry-deck-mcp.service
src/telemetry_deck_mcp/: client.py  server.py
